--- a/netlify.toml
+++ b/netlify.toml
@@ -6,21 +6,6 @@
   NODE_VERSION = "18"
   NEXT_TELEMETRY_DISABLED = "1"
 
-# Important: Désactiver le plugin Next.js de Netlify pour static export
+# Configuration pour Next.js Runtime
 [build.processing]
   skip_processing = true
-
-# Redirections SPA
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-# Headers de sécurité
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
